--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+
 html,
 body {
   padding: 0;
@@ -14,3 +17,5 @@ a {
 * {
   box-sizing: border-box;
 }
+
+@tailwind utilities;
