--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,4 +18,14 @@ a {
   box-sizing: border-box;
 }
 
+.blur{
+  background: rgba(31, 30, 36, 0.2);
+  backdrop-filter: blur(10px);
+}
+
+.nav{
+  background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0) 100%)
+}
+
+
 @tailwind utilities;
