🚧 Projects in progress

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,5 +27,10 @@ a {
   background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0) 100%)
 }
 
+.videoCard{
+  background: rgba(255, 255, 255, 0.2);
+backdrop-filter: blur(10px);
+}
+
 
 @tailwind utilities;
