--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,6 +52,16 @@ a {
   outline: none;
 }
 
+.services_text{
+  background-image: linear-gradient(90.34deg, #F0634D 3.29%, #54A870 63.14%, #26BAFF 95.23%);
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; 
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+}
+
 @media only screen and (max-width: 400px) {
   .rec.rec-arrow{
     display: none
