--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,30 @@
 @tailwind base;
 @tailwind components;
 
-@import url('https://fonts.googleapis.com/css2?family=Arimo:wght@400;500;600;700&family=Noto+Sans:wght@400;700&display=swap');
+@font-face {
+  font-family: NewFont;
+  src: url(../public/font/MuseoSansRounded700.otf);
+}
+
+@font-face {
+  font-family: NewFontLight;
+  src: url(../public/font/MuseoSansRounded300.otf);
+}
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: Noto Sans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
+}
+
+h1, h2,h3{
+  font-family: NewFont, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+p,span{
+  font-family: NewFontLight,-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 a {
