--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,12 +19,17 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
 }
 
-h1, h2,h3{
-  font-family: NewFont, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+h1,
+h2,
+h3 {
+  font-family: NewFont, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-p,span{
-  font-family: NewFontLight,-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+p,
+span {
+  font-family: NewFontLight, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 a {
@@ -70,7 +75,8 @@ a {
   outline: none;
 }
 
-.services_text {
+.services_text,
+.team_text {
   background-image: linear-gradient(
     90.34deg,
     #f0634d 3.29%,
