--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,9 @@ body {
 
 h1,
 h2,
-h3 {
+h3,
+h4,
+h5 {
   font-family: NewFont, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -74,9 +76,42 @@ a {
 .rec.rec-arrow:focus {
   outline: none;
 }
+.hr-text {
+  line-height: 1em;
+  position: relative;
+  outline: 0;
+  border: 0;
+  color: white;
+  text-align: center;
+  height: 1.5em;
+  font-family: NewFontLight, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.hr-text:before {
+  content: '';
+  background-image: linear-gradient(
+    90.34deg,
+    #f0634d 3.29%,
+    #54a870 63.14%,
+    #26baff 95.23%
+  );
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  height: 1px;
+}
+.hr-text:after {
+  content: attr(data-content);
+  position: relative;
+  display: inline-block;
+  color: white;
+  padding: 0 0.5em;
+  line-height: 1.5em;
+  background-color: #151319;
+}
 
-.services_text,
-.team_text {
+.services_text {
   background-image: linear-gradient(
     90.34deg,
     #f0634d 3.29%,
