:lipstick: minor ui fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -169,4 +169,8 @@ input[data-autocompleted] {
   background-color: transparent !important;
 }
 
+.show-less {
+  max-height: none !important;
+}
+
 @tailwind utilities;
